Change color for Projects page

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -21,22 +21,22 @@
         <li id="images-li"><img src="../assets/music.png" height="130" width="90ß"></li>
       </ul>
     </div>
-  </div><!--End Slide 1-->
+  </div>
 
   <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
     <a class="button" data-slide="3" title=""></a>
     <p id="contact-header-projects">Projects</p>
     <div id="owl-demo">
       <div class="item"><%= link_to image_tag("restroulette.png", height: '32', width: '32'), "http://restaurant-roulette.herokuapp.com/", :target => "_blank" %>
-        <p id="item-paragraph"> <span style="font-size:30px">Restaurant Roulette</span><br><br> Web application that helps groups of people solve the indecision that arises when choosing a restaurant due to conflicting preferences
+        <p id="item-paragraph"> <span style="font-size:40px">Restaurant Roulette</span><br><br> Web application that helps groups of people solve the indecision that arises when choosing a restaurant due to conflicting preferences
         </p>
       </div>
       <div class="item"><%= link_to image_tag("glycemopedia.png", height: '32', width: '32'), "https://glycemopedia.herokuapp.com/", :target => "_blank" %>
-        <p id="item-paragraph"><span style="font-size:30px">Glycemopedia</span><br><br>Web application that enables users to make intelligent food choices based on glycemic index of foods consumed, which can help in the prevention of diabetes and help blood sugar regulation </p>
+        <p id="item-paragraph"><span style="font-size:40px">Glycemopedia</span><br><br>Web application that enables users to make intelligent food choices based on glycemic index of foods consumed, which can help in the prevention of diabetes and help blood sugar regulation </p>
       </div>
 
     </div>
-  </div><!--End Slide 2-->
+  </div>
 
 
   <div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
@@ -54,29 +54,24 @@
           <li id="contact-icons-info-li">Priyanka Saigal</li>
           <li id="contact-icons-info-li">San Francisco, CA</li>
           <li id="contact-icons-info-li">psaigal48@gmail.com</li>
-          <li id="contact-icons-info-li">Click Here</li>
+          <li id="contact-icons-info-li"><%= link_to "Click Here", "https://www.docdroid.net/ezqPnsg/resume.pdf.html", :target => "_blank" %></li>
         </ul>
-      <!-- </div> -->
+
 
 
       <ul id="social-media-icons">
-        <li id="social-media-icons-li">
+        <li class="social-media-icons-li">
           <%= link_to image_tag("GitHub.png"), "http://github.com/psaigal", :target => "_blank" %>
         </li>
-        <li id="social-media-icons-li">
+        <li class="social-media-icons-li">
           <%= link_to image_tag("GooglePlus.png"), "https://plus.google.com/100529383494509522614/posts", :target => "_blank" %>
         </li>
-        <li id="social-media-icons-li">
+        <li class="social-media-icons-li">
           <%= link_to image_tag("LinkedIn.png"), "https://www.linkedin.com/in/priyanka-saigal-5034ab56", :target => "_blank" %>
         </li>
-        <li id="social-media-icons-li">
+        <li class="social-media-icons-li">
           <%= link_to image_tag("Twitter.png"), "https://twitter.com/priyankasaigal", :target => "_blank" %>
         </li>
       </ul>
     <div>
   </div>
-
-
-
-
-
