--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -98,7 +98,6 @@ html,body {
   margin-top:5px;
   margin-bottom: 15px;
   width:100%;
-  position:relative;
   text-align:center;
 }
 
@@ -184,9 +183,11 @@ ul#social-media-icons {
     margin-top: 7%;
 }
 
-li#social-media-icons-li {
+li.social-media-icons-li {
     display: inline;
-    padding:30px;
+    padding:50px;
+    height: '150px';
+    width: '150px';
 }
 
 
@@ -225,7 +226,7 @@ p {
     font-size:80px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
-    color:orange;
+    color:white;
     text-shadow: 1px 1px #000000;
     text-align:center;
     width:100%;
@@ -233,7 +234,7 @@ p {
     margin-bottom: 3%;
     padding-top: 15px;
     padding-bottom: 10px;
-    /*background-color:orange;*/
+    background-color:#D46A6A;
 }
 
 #owl-demo .item {
@@ -251,17 +252,24 @@ p {
     display: block;
     width: 90%;
     height: auto;
-    margin-left: 20%;
+    margin-top: 2%;
+    margin-left: 10%;
     margin-right: 10%;
-    padding-bottom: 20%;
+    border-radius: 15px;
+    border:2px solid #D46A6A;
 }
 
-#item-paragraph {
+p#item-paragraph {
     color: black;
     width: 70%;
     font-size: 20px;
     margin-left: 15%;
     margin-right: 10%;
-    margin-top: 2%;
+    margin-top: 100px;
     text-align: center;
+    padding: 20px;
+    border-radius: 15px;
+    opacity: 0.7;
 }
+
+
