Change image directory

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -17,8 +17,8 @@
       <ul id="images">
         <li id="images-li"><img src="/imgs/computer.png" height="140" width="135"></li>
         <li id="images-li"><img src="/imgs/books.png" height="120" width="140"></li>
-        <li id="images-li"><img src="/imgs//apple.png" height="120" width="120"></li>
-        <li id="images-li"><img src="/imgs//music.png" height="130" width="90ß"></li>
+        <li id="images-li"><img src="/imgs/apple.png" height="120" width="120"></li>
+        <li id="images-li"><img src="/imgs/music.png" height="130" width="90ß"></li>
       </ul>
     </div>
   </div>
