Positioned porfolio links

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -30,31 +30,37 @@
     <ul class="portfolio">
       <div class="col-sm-4">
           <li class="portfolio-list">
+            <a href="http://glycemopedia.herokuapp.com" class="portfolio-link">
             <div id="pic1">
-              <div class="text">
+                <div class="text">
                 Platform that enables users to make intelligent food choices based on the glycemic index of foods consumed.
-              </div>
+                </div>
             </div>
+            </a>
           </li>
       </div>
 
       <div class="col-sm-4">
         <li class="portfolio-list">
+          <a href="http://restaurant-roulette.herokuapp.com" class="portfolio-link">
           <div id="pic2">
             <div class="text">
               Food decision service to help indecisive friends quickly find a restaurant based on conflicted preferences.
             </div>
           </div>
+          </a>
         </li>
       </div>
 
       <div class="col-sm-4">
         <li class="portfolio-list">
+        <a href="http://filmed-in-sf.herokuapp.com" class="portfolio-link">
           <div id="pic3">
             <div class="text">
               Web application that allows movie aficionados to view on a map the locations in San Francisco where their favorite movies were filmed
             </div>
           </div>
+        </a>
         </li>
       </div>
     </ul>
