--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -226,15 +226,15 @@ p {
     font-size:80px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
-    color:white;
+    color:#87CEFA;
     text-shadow: 1px 1px #000000;
     text-align:center;
     width:100%;
     margin-top:0px;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
     padding-top: 15px;
     padding-bottom: 10px;
-    background-color:#87CEFA;
+    /*background-color:#87CEFA;*/
 }
 
 .text {
@@ -260,7 +260,7 @@ p {
     font-weight:500;
     font-family: 'Raleway', sans-serif;
     text-align: center;
-    /*padding:30px;*/
+    padding-top:30px;
 }
 
 #pic2 {
@@ -278,7 +278,7 @@ p {
     font-weight:500;
     font-family: 'Raleway', sans-serif;
     text-align: center;
-    /*padding:30px;*/
+    padding-top:30px;
 }
 
 
@@ -305,4 +305,12 @@ p {
 .portfolio-list {
     display: inline-block;
     padding: 10px;
+}
+
+ a:hover {
+   text-decoration: none !important;
+}
+
+ul.portfolio {
+   padding: 0%;
 }
