Change resume link

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -82,7 +82,7 @@
           <li id="contact-icons-info-li">Priyanka Saigal</li>
           <li id="contact-icons-info-li">San Francisco, CA</li>
           <li id="contact-icons-info-li">psaigal48@gmail.com</li>
-          <li id="contact-icons-info-li"><%= link_to "Click Here", "https://www.docdroid.net/ezqPnsg/resume.pdf.html", :target => "_blank" %></li>
+          <li id="contact-icons-info-li"><%= link_to "Click Here", "https://www.docdroid.net/TBFIxXH/resume.pdf.html", :target => "_blank" %></li>
         </ul>
 
 
