Add typed.js plugin

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -5,23 +5,11 @@
     <li data-slide="2" class="active">Projects</li>
     <li data-slide="3" class="active">Contact Me</li>
   </ul>
-    <div id="front-page">
-      <h1 id="heading">Hi, I'm Priyanka Saigal.</h1>
-        <ul id="title">
-        <li id="title-li">Web Developer <span style="font-size:30px">&#9679;</span></li>
-        <li id="title-li">Avid Learner <span style="font-size:30px">&#9679;</li>
-        <li id="title-li">Health Junkie <span style="font-size:30px">&#9679;</li>
-        <li id="title-li">Music Lover<span style="font-size:30px">&#9679;</li>
-      </ul>
-
-      <ul id="images">
-        <li id="images-li"><img src="../assets/computer.png" height="140" width="135"></li>
-        <li id="images-li"><img src="../assets/books.png" height="120" width="140"></li>
-        <li id="images-li"><img src="../assets/apple.png" height="120" width="120"></li>
-        <li id="images-li"><img src="../assets/music.png" height="130" width="90ß"></li>
-      </ul>
-    </div>
-  </div><!--End Slide 1-->
+  <div id="front-page">
+    <h1 id="heading"><span class="element"></span></h1>
+      <p id="title-li"><span class="element-two"></span></p>
+  </div>
+</div><!--End Slide 1-->
 
   <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
     <a class="button" data-slide="3" title=""></a>
