--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -83,7 +83,7 @@ html,body {
     width: 80%;
     margin:0 auto;
     position:absolute;
-    top:25%;
+    top:35%;
     left:10%;
     right:10%;
 }
@@ -102,26 +102,13 @@ html,body {
   text-align:center;
 }
 
-ul#title {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 0%;
-    position: relative;
+p#title-li {
     font-family: 'Raleway', sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    padding: 10px;
-    width:100%;
-    text-align:center;
-}
-
-li#title-li {
-    display: inline;
-    font-size: 30px;
+    font-size: 40px;
     padding: 5px;
     color:#173e43;
-    width:100%
+    font-weight: 200;
+    text-align: center;
 }
 
 ul#images {
@@ -217,7 +204,7 @@ p {
     font-size:30px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
-    color:white;
+    color:black;
     text-align:center;
 }
 
@@ -264,4 +251,26 @@ p {
     margin-right: 10%;
     margin-top: 2%;
     text-align: center;
+}
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
 }
